[gd_scene load_steps=21 format=3 uid="uid://ydeqcyxdxc5v"]

[ext_resource type="Script" uid="uid://6oyusuqmnr0s" path="res://Scenes/Player/abilities/jetpack.gd" id="1_62i0w"]
[ext_resource type="PackedScene" uid="uid://doectbfr0g1g" path="res://Scenes/UI Elements/health_interface.tscn" id="2_6g2g4"]
[ext_resource type="Texture2D" uid="uid://b1v5bggi5uwup" path="res://Scenes/Levels/Assets/main_character/main_character/jetpack_guy/jetpack_guy_boost.png" id="2_od05q"]
[ext_resource type="Texture2D" uid="uid://c0yguopseu1vm" path="res://Scenes/Levels/Assets/main_character/main_character/jetpack_guy/jetpack_guy_idle.png" id="3_62i0w"]
[ext_resource type="Texture2D" uid="uid://causb16hnxjuq" path="res://Scenes/Levels/Assets/main_character/main_character/jetpack_guy/jetpack_guy_jump.png" id="4_62i0w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ev21g"]
atlas = ExtResource("2_od05q")
region = Rect2(0, 0, 75, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gaam"]
atlas = ExtResource("2_od05q")
region = Rect2(75, 0, 75, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6668"]
atlas = ExtResource("2_od05q")
region = Rect2(0, 0, 75, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_od05q"]
atlas = ExtResource("3_62i0w")
region = Rect2(0, 0, 58, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqeoq"]
atlas = ExtResource("3_62i0w")
region = Rect2(58, 0, 58, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhti3"]
atlas = ExtResource("3_62i0w")
region = Rect2(116, 0, 58, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt3bg"]
atlas = ExtResource("3_62i0w")
region = Rect2(174, 0, 58, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wcw1"]
atlas = ExtResource("4_62i0w")
region = Rect2(0, 0, 75, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_npgy4"]
atlas = ExtResource("4_62i0w")
region = Rect2(75, 0, 75, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq3kh"]
atlas = ExtResource("4_62i0w")
region = Rect2(150, 0, 75, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_arw5b"]
atlas = ExtResource("4_62i0w")
region = Rect2(225, 0, 75, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_62i0w"]
atlas = ExtResource("3_62i0w")
region = Rect2(0, 0, 58, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_5v14v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev21g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gaam")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6668")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_od05q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqeoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhti3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt3bg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wcw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npgy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq3kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arw5b")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_62i0w")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x6668"]
size = Vector2(20, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6g2g4"]
size = Vector2(20, 39)

[node name="jetpack" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_62i0w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -30)
sprite_frames = SubResource("SpriteFrames_5v14v")
animation = &"move"
autoplay = "idle"

[node name="Hitbox" type="Area2D" parent="AnimatedSprite2D" groups=["hitboxes"]]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Hitbox"]
position = Vector2(0, 38)
shape = SubResource("RectangleShape2D_x6668")
debug_color = Color(0.998726, 0.0282396, 1.92523e-07, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_6g2g4")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_bottom = 600

[node name="Health Interface" parent="Camera2D" instance=ExtResource("2_6g2g4")]
offset_left = -353.0
offset_top = -191.0
offset_right = -353.0
offset_bottom = -191.0

[node name="PlayerOnScreen" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -18)

[node name="Hurtbox" type="Area2D" parent="." groups=["hurtboxes"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_6g2g4")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="AnimatedSprite2D/Hitbox" to="." method="_on_hitbox_area_entered"]
